# solana-voting-system

./: package.json  readme.md
program/: Cargo.toml
program/src/: error.rs  instruction.rs  lib.rs  processor.rs  state.rs
server/: .env.example  jest.config.js  package.json  tsconfig.json
server/src/: app.ts  dependency.ts  server.ts
server/src/config/: constants.ts
server/src/controllers/: vote.controller.ts
server/src/routes/: vote.route.ts
server/src/services/: vote.service.ts
server/src/utils/: borsh.ts  instructions.ts  logger.ts  program.ts
server/tests/unit/services/: VoteService.test.ts
