[package]
name = "voting_system"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "1.18.4"
borsh =  "1.3.1"
solana-program-test = "1.18.4"
solana-sdk = "1.18.4"
thiserror = "1.0.57"

[lib]
name = "voting_system"
crate-type = ["cdylib", "lib"]
